[project]
name = "model-clustering"
version = "0.1.0"
description = ""
authors = [
    {name = "poaa",email = "petterson.oaa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
